--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,355 @@
+<!-- Main HTML file for Digital Shop -->
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Digital Shop</title>
-    <link rel="stylesheet" href="./output.css">
-</head>
-<body>
-    
+<html lang="fa" dir="rtl">
+    <head>
+        <!-- Meta and title -->
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Digital Shop</title>
+        <!-- Tailwind CSS output -->
+        <link rel="stylesheet" href="./output.css" />
+    </head>
+    <body class="text-gray-900 bg-gray-50">
+        <!-- SVG icons definitions -->
+        <svg class="hidden">
+            <symbol
+                id="icon-search"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-search"
+                aria-hidden="true">
+                <path d="m21 21-4.34-4.34"></path>
+                <circle cx="11" cy="11" r="8"></circle>
+            </symbol>
+            <symbol
+                id="icon-user"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-user"
+                aria-hidden="true">
+                <path d="M19 21v-2a4 4 0 0 0-4-4H9a4 4 0 0 0-4 4v2"></path>
+                <circle cx="12" cy="7" r="4"></circle>
+            </symbol>
+            <symbol
+                id="icon-heart"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-heart"
+                aria-hidden="true">
+                <path
+                    d="M2 9.5a5.5 5.5 0 0 1 9.591-3.676.56.56 0 0 0 .818 0A5.49 5.49 0 0 1 22 9.5c0 2.29-1.5 4-3 5.5l-5.492 5.313a2 2 0 0 1-3 .019L5 15c-1.5-1.5-3-3.2-3-5.5"></path>
+            </symbol>
+            <symbol
+                id="icon-shopping-cart"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-shopping-cart"
+                aria-hidden="true">
+                <circle cx="8" cy="21" r="1"></circle>
+                <circle cx="19" cy="21" r="1"></circle>
+                <path
+                    d="M2.05 2.05h2l2.66 12.42a2 2 0 0 0 2 1.58h9.78a2 2 0 0 0 1.95-1.57l1.65-7.43H5.12"></path>
+            </symbol>
+            <symbol
+                id="icon-menu"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-menu"
+                aria-hidden="true">
+                <path d="M4 12h16"></path>
+                <path d="M4 18h16"></path>
+                <path d="M4 6h16"></path>
+            </symbol>
+            <symbol
+                id="icon-x"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-x"
+                aria-hidden="true">
+                <path d="M18 6 6 18"></path>
+                <path d="m6 6 12 12"></path>
+            </symbol>
+        </svg>
 
-    <script src="./js/script.js"></script>
-</body>
+        <!-- Header section -->
+        <header
+            class="sticky top-0 bg-white/95 backdrop-blur-md border-b border-b-slate-200 shadow-sm z-50">
+            <!-- Top bar with shipping and support info -->
+            <div
+                class="bg-gradient-to-r from-blue-500 to-cyan-500 text-white text-sm py-2">
+                <div class="container mx-auto px-4">
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center gap-6 animate-slideIn">
+                            <span class="hidden sm:inline"
+                                >ارسال رایگان برای خریدهای بالای ۵۰۰ هزار
+                                تومان</span
+                            >
+                            <span class="sm:hidden"
+                                >ارسال رایگان بالای ۵۰۰ هزار تومان</span
+                            >
+                            <span class="hidden sm:inline"
+                                >تماس: ۰۲۱-۸۸۰۰۸۸۰۰</span
+                            >
+                        </div>
+
+                        <div class="flex items-center gap-6 animate-slideIn">
+                            <span class="hidden lg:inline"
+                                >پشتیبانی ۲۴ ساعته</span
+                            >
+                            <span class="hidden md:inline"
+                                >گارانتی اصالت کالا</span
+                            >
+                            <span class="md:hidden">پشتیبانی ۲۴/۷</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Main header content -->
+            <div class="container mx-auto px-4 py-4">
+                <!-- Logo and navigation -->
+                <div class="flex items-center justify-between gap-4 lg:gap-8">
+                    <!-- Logo and shop name -->
+                    <div class="flex items-center gap-2 animate-fadeIn">
+                        <div
+                            class="flex items-center justify-center w-10 h-10 rounded-xl bg-gradient-to-br from-blue-500 to-sky-500 text-xl shadow-md hover:shadow-lg transition-shadow">
+                            🛍️
+                        </div>
+                        <h1
+                            class="font-bold text-lg sm:text-xl lg:text-2xl text-gradient">
+                            فروشگاه دیجیتال
+                        </h1>
+                    </div>
+
+                    <!-- Search bar (desktop) -->
+                    <div
+                        class="relative hidden sm:block flex-1 max-w-2xl animate-fadeIn">
+                        <input
+                            type="text"
+                            id="search"
+                            placeholder="جستجوی محصولات..."
+                            class="w-full h-12 pl-10 pr-4 rounded-xl border-2 border-transparent focus:border-blue-500 shadow-sm hover:shadow-md focus:outline-none focus:ring-4 focus:ring-blue-300 transition-all duration-300" />
+
+                        <button
+                            class="absolute left-2 top-1/2 -translate-y-1/2 flex items-center justify-center w-9 h-9 rounded-xl bg-gradient-to-r from-blue-500 to-cyan-500 text-white hover:scale-105 transition-transform cursor-pointer">
+                            <svg class="size-5">
+                                <use href="#icon-search"></use>
+                            </svg>
+                        </button>
+                    </div>
+
+                    <!-- User actions: login, wishlist, cart, mobile menu -->
+                    <div
+                        class="flex items-center gap-2 lg:gap-4 animate-fadeIn">
+                        <button
+                            class="hidden lg:flex items-center lg:gap-2 h-9 px-2 lg:px-2.5 hover:bg-blue-500/10 rounded-full font-medium text-sm transition-colors">
+                            <svg class="size-5">
+                                <use href="#icon-user"></use>
+                            </svg>
+
+                            <span class="hidden lg:inline">ورود / ثبت نام</span>
+                        </button>
+
+                        <button
+                            class="relative flex items-center justify-center size-8 sm:size-9 rounded-full hover:bg-blue-500/10 hover:-translate-y-1 hover:shadow-lg transition-all duration-300">
+                            <svg class="size-4">
+                                <use href="#icon-heart"></use>
+                            </svg>
+
+                            <span
+                                class="absolute -top-2 -right-2 size-5 rounded-full bg-gradient-to-r from-red-500 to-red-600 text-xs text-white"
+                                >3</span
+                            >
+                        </button>
+
+                        <button
+                            class="relative flex items-center justify-center size-8 sm:size-9 rounded-full hover:bg-blue-500/10 hover:-translate-y-1 hover:shadow-lg transition-all duration-300">
+                            <svg class="size-4">
+                                <use href="#icon-shopping-cart"></use>
+                            </svg>
+
+                            <span
+                                class="absolute -top-2 -right-2 size-5 rounded-full bg-gradient-to-r from-emerald-500 to-green-600 text-xs text-white"
+                                >3</span
+                            >
+                        </button>
+
+                        <button
+                            id="mobile-menu-btn"
+                            class="flex items-center justify-center lg:hidden size-8">
+                            <svg id="menu-icon" class="size-5">
+                                <use href="#icon-menu"></use>
+                            </svg>
+
+                            <svg id="close-icon" class="size-5 hidden">
+                                <use href="#icon-x"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Main navigation (desktop) -->
+                <nav class="hidden lg:block mt-4 animate-slideIn">
+                    <ul class="flex items-center gap-6 xl:gap-8">
+                        <li>
+                            <a
+                                href="#"
+                                class="group relative px-3 py-2 hover:text-blue-500 hover:bg-blue-500/5 rounded-lg text-sm transition-colors duration-300">
+                                صفحه اصلی
+                                <span
+                                    class="absolute bottom-0 left-0 ri0 w-0 group-hover:w-full h-0.5 bg-gradient-to-r from-blue-500 to-cyan-500 transition-all duration-300"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="#"
+                                class="group relative px-3 py-2 hover:text-blue-500 hover:bg-blue-500/5 rounded-lg text-sm transition-colors duration-300">
+                                موبایل و تبلت
+
+                                <span
+                                    class="absolute bottom-0 left-0 ri0 w-0 group-hover:w-full h-0.5 bg-gradient-to-r from-blue-500 to-cyan-500 transition-all duration-300"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="#"
+                                class="group relative px-3 py-2 hover:text-blue-500 hover:bg-blue-500/5 rounded-lg text-sm transition-colors duration-300">
+                                لپ تاپ و کامپیوتر
+
+                                <span
+                                    class="absolute bottom-0 left-0 ri0 w-0 group-hover:w-full h-0.5 bg-gradient-to-r from-blue-500 to-cyan-500 transition-all duration-300"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="#"
+                                class="group relative px-3 py-2 hover:text-blue-500 hover:bg-blue-500/5 rounded-lg text-sm transition-colors duration-300">
+                                صوتی و تصویری
+
+                                <span
+                                    class="absolute bottom-0 left-0 ri0 w-0 group-hover:w-full h-0.5 bg-gradient-to-r from-blue-500 to-cyan-500 transition-all duration-300"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="#"
+                                class="group relative px-3 py-2 hover:text-blue-500 hover:bg-blue-500/5 rounded-lg text-sm transition-colors duration-300">
+                                لوازم جانبی
+
+                                <span
+                                    class="absolute bottom-0 left-0 ri0 w-0 group-hover:w-full h-0.5 bg-gradient-to-r from-blue-500 to-cyan-500 transition-all duration-300"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="#"
+                                class="group relative px-3 py-2 hover:text-blue-500 hover:bg-blue-500/5 rounded-lg text-sm transition-colors duration-300">
+                                ساعت هوشمند
+
+                                <span
+                                    class="absolute bottom-0 left-0 ri0 w-0 group-hover:w-full h-0.5 bg-gradient-to-r from-blue-500 to-cyan-500 transition-all duration-300"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="#"
+                                class="group relative px-3 py-2 hover:text-blue-500 hover:bg-blue-500/5 rounded-lg text-sm transition-colors duration-300">
+                                درباره ما
+
+                                <span
+                                    class="absolute bottom-0 left-0 ri0 w-0 group-hover:w-full h-0.5 bg-gradient-to-r from-blue-500 to-cyan-500 transition-all duration-300"></span>
+                            </a>
+                        </li>
+                        <li>
+                            <a
+                                href="#"
+                                class="group relative px-3 py-2 hover:text-blue-500 hover:bg-blue-500/5 rounded-lg text-sm transition-colors duration-300">
+                                تماس با ما
+
+                                <span
+                                    class="absolute bottom-0 left-0 ri0 w-0 group-hover:w-full h-0.5 bg-gradient-to-r from-blue-500 to-cyan-500 transition-all duration-300"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <!-- Search bar (mobile) -->
+                <div class="relative sm:hidden mt-4 animate-fadeIn">
+                    <input
+                        type="text"
+                        id="search-mobile"
+                        placeholder="جستجوی محصولات..."
+                        class="w-full h-12 pl-10 pr-4 rounded-xl border-2 border-transparent focus:border-blue-500 shadow-sm hover:shadow-md focus:outline-none focus:ring-4 focus:ring-blue-300 transition-all duration-300" />
+
+                    <button
+                        class="absolute left-2 top-1/2 -translate-y-1/2 flex items-center justify-center w-9 h-9 rounded-xl bg-gradient-to-r from-blue-500 to-cyan-500 text-white hover:scale-105 transition-transform cursor-pointer">
+                        <svg class="size-5">
+                            <use href="#icon-search"></use>
+                        </svg>
+                    </button>
+                </div>
+
+                <!-- Mobile navigation menu -->
+                <nav
+                    id="mobile-nav"
+                    class="lg:hidden hidden p-4 mt-4 bg-white rounded-xl shadow-xl animate-fadeIn">
+                    <div class="flex flex-col gap-2">
+                        <a href="#" class="px-3 py-2 text-sm">صفحه اصلی</a>
+                        <a href="#" class="px-3 py-2 text-sm">موبایل و تبلت</a>
+                        <a href="#" class="px-3 py-2 text-sm"
+                            >لپ تاپ و کامپیوتر</a
+                        >
+                        <a href="#" class="px-3 py-2 text-sm">صوتی و تصویری</a>
+                        <a href="#" class="px-3 py-2 text-sm">لوازم جانبی</a>
+                        <a href="#" class="px-3 py-2 text-sm">ساعت هوشمند</a>
+                        <a href="#" class="px-3 py-2 text-sm">درباره ما</a>
+                        <a href="#" class="px-3 py-2 text-sm">تماس با ما</a>
+                        <div class="mt-4 pt-4 border-t border-t-slate-300">
+                            <button
+                                class="flex items-center gap-2 w-full h-9 py-2 px-3 bg-gray-50 border border-slate-300 rounded-lg font-medium text-sm transition-colors">
+                                <svg class="size-5">
+                                    <use href="#icon-user"></use>
+                                </svg>
+
+                                <span>ورود / ثبت نام</span>
+                            </button>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </header>
+
+        <!-- Main JavaScript file -->
+        <script src="./js/script.js"></script>
+    </body>
 </html>
