asset: add custom fonts

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <!-- Tailwind CSS output -->
         <link rel="stylesheet" href="./output.css" />
     </head>
-    <body class="text-gray-900 bg-gray-50">
+    <body class="text-gray-900 bg-gray-50 font-vazir">
         <!-- SVG icons definitions -->
         <svg class="hidden">
             <symbol
@@ -146,7 +146,7 @@
                             🛍️
                         </div>
                         <h1
-                            class="font-bold text-lg sm:text-xl lg:text-2xl text-gradient">
+                            class="font-vazir-bold text-lg sm:text-xl lg:text-2xl text-gradient">
                             فروشگاه دیجیتال
                         </h1>
                     </div>
@@ -172,7 +172,7 @@
                     <div
                         class="flex items-center gap-2 lg:gap-4 animate-fadeIn">
                         <button
-                            class="hidden lg:flex items-center lg:gap-2 h-9 px-2 lg:px-2.5 hover:bg-blue-500/10 rounded-full font-medium text-sm transition-colors">
+                            class="hidden lg:flex items-center lg:gap-2 h-9 px-2 lg:px-2.5 hover:bg-blue-500/10 rounded-full font-vazir-medium text-sm transition-colors">
                             <svg class="size-5">
                                 <use href="#icon-user"></use>
                             </svg>
@@ -336,7 +336,7 @@
                         <a href="#" class="px-3 py-2 text-sm">تماس با ما</a>
                         <div class="mt-4 pt-4 border-t border-t-slate-300">
                             <button
-                                class="flex items-center gap-2 w-full h-9 py-2 px-3 bg-gray-50 border border-slate-300 rounded-lg font-medium text-sm transition-colors">
+                                class="flex items-center gap-2 w-full h-9 py-2 px-3 bg-gray-50 border border-slate-300 rounded-lg font-vazir-medium text-sm transition-colors">
                                 <svg class="size-5">
                                     <use href="#icon-user"></use>
                                 </svg>
