--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,68 @@
                 <path d="M18 6 6 18"></path>
                 <path d="m6 6 12 12"></path>
             </symbol>
+            <symbol
+                id="icon-sparkles"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-sparkles"
+                aria-hidden="true">
+                <path
+                    d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"></path>
+                <path d="M20 2v4"></path>
+                <path d="M22 4h-4"></path>
+                <circle cx="4" cy="20" r="2"></circle>
+            </symbol>
+            <symbol
+                id="icon-zap"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-zap"
+                aria-hidden="true">
+                <path
+                    d="M4 14a1 1 0 0 1-.78-1.63l9.9-10.2a.5.5 0 0 1 .86.46l-1.92 6.02A1 1 0 0 0 13 10h7a1 1 0 0 1 .78 1.63l-9.9 10.2a.5.5 0 0 1-.86-.46l1.92-6.02A1 1 0 0 0 11 14z"></path>
+            </symbol>
+            <symbol
+                id="icon-arrow-left"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-arrow-left"
+                aria-hidden="true">
+                <path d="m12 19-7-7 7-7"></path>
+                <path d="M19 12H5"></path>
+            </symbol>
+            <symbol
+                id="icon-gift"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="lucide lucide-gift"
+                aria-hidden="true">
+                <rect x="3" y="8" width="18" height="4" rx="1"></rect>
+                <path d="M12 8v13"></path>
+                <path d="M19 12v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-7"></path>
+                <path
+                    d="M7.5 8a2.5 2.5 0 0 1 0-5A4.8 8 0 0 1 12 8a4.8 8 0 0 1 4.5-5 2.5 2.5 0 0 1 0 5"></path>
+            </symbol>
         </svg>
 
         <!-- Header section -->
@@ -187,7 +249,7 @@
                             </svg>
 
                             <span
-                                class="absolute -top-2 -right-2 size-5 rounded-full bg-gradient-to-r from-red-500 to-red-600 text-xs text-white"
+                                class="absolute -top-2 -right-2 flex items-center justify-center size-5 rounded-full bg-gradient-to-r from-red-500 to-red-600 text-xs text-white"
                                 >3</span
                             >
                         </button>
@@ -199,7 +261,7 @@
                             </svg>
 
                             <span
-                                class="absolute -top-2 -right-2 size-5 rounded-full bg-gradient-to-r from-emerald-500 to-green-600 text-xs text-white"
+                                class="absolute -top-2 -right-2 flex items-center justify-center size-5 rounded-full bg-gradient-to-r from-emerald-500 to-green-600 text-xs text-white"
                                 >3</span
                             >
                         </button>
@@ -322,7 +384,7 @@
                 <!-- Mobile navigation menu -->
                 <nav
                     id="mobile-nav"
-                    class="lg:hidden hidden p-4 mt-4 bg-white rounded-xl shadow-xl animate-fadeIn">
+                    class="lg:hidden hidden p-4 mt-4 bg-white rounded-xl shadow-xl overflow-y-auto animate-fadeIn">
                     <div class="flex flex-col gap-2">
                         <a href="#" class="px-3 py-2 text-sm">صفحه اصلی</a>
                         <a href="#" class="px-3 py-2 text-sm">موبایل و تبلت</a>
@@ -348,6 +410,145 @@
                 </nav>
             </div>
         </header>
+
+        <main>
+            <section
+                class="relative py-10 lg:py-20 bg-gradient-to-r from-blue-500 via-cyan-500 to-blue-500">
+                <div class="container mx-auto px-4 z-10">
+                    <div
+                        class="flex flex-col lg:flex-row-reverse items-center gap-12">
+                        <div
+                            class="relative w-full lg:basis-1/2 animate-fadeIn">
+                            <div
+                                class="p-8 space-y-6 bg-white/20 backdrop-blur-md border border-white/30 rounded-3xl text-center text-white shadow-2xl hover:scale-105 transition-all duration-500">
+                                <div
+                                    class="w-full aspect-[4/3] h-72 rounded-2xl overflow-hidden">
+                                    <img
+                                        src="../public/images/iphone-16.jpg"
+                                        alt="آیفون ۱۶"
+                                        class="w-full h-full object-cover" />
+                                </div>
+
+                                <h3
+                                    class="font-vazir-bold text-2xl lg:text-3xl">
+                                    آیفون 16 پرو مکس
+                                </h3>
+                                <p class="text-lg lg:text-xl opacity-90">
+                                    با تخفیف ویژه
+                                </p>
+                                <div class="space-y-2">
+                                    <h3
+                                        class="font-vazir-bold text-2xl lg:text-3xl">
+                                        150,964,129 تومان
+                                    </h3>
+                                    <p class="text-lg line-through opacity-90">
+                                        152,899,000 تومان
+                                    </p>
+                                </div>
+                                <button
+                                    class="w-full py-2 bg-white rounded-2xl text-gray-900 font-vazir-medium hover:scale-105 transition-transform cursor-pointer">
+                                    خرید فوری
+                                </button>
+                            </div>
+
+                            <span
+                                class="absolute -top-6 -right-3 lg:-right-6 py-2 px-4 bg-gradient-to-r from-red-500 to-red-600 rounded-xl lg:rounded-2xl text-xs lg:text-sm text-white animate-bounce"
+                                >15% تخفیف</span
+                            >
+
+                            <span
+                                class="absolute -bottom-6 -left-3 lg:-left-6 py-2 px-4 bg-gradient-to-r from-emerald-500 to-green-600 rounded-xl lg:rounded-2xl text-xs lg:text-sm text-white animate-bounce"
+                                >ارسال رایگان</span
+                            >
+                        </div>
+
+                        <div
+                            class="w-full lg:basis-1/2 space-y-8 text-white animate-fadeIn">
+                            <div class="flex items-center gap-2">
+                                <svg class="size-6 text-yellow-300">
+                                    <use href="#icon-sparkles"></use>
+                                </svg>
+
+                                <span
+                                    class="px-3 py-1 font-vazir-medium text-sm bg-white/20 rounded-full"
+                                    >پیشنهاد ویژه</span
+                                >
+                            </div>
+
+                            <h2
+                                class="text-4xl lg:text-5xl xl:text-6xl leading-tight font-vazir-bold">
+                                جدیدترین محصولات
+                                <span
+                                    class="block text-3xl lg:text-4xl bg-clip-text bg-gradient-to-r from-yellow-300 to-orange-300 text-transparent"
+                                    >تکنولوژی روز دنیا</span
+                                >
+                            </h2>
+
+                            <p class="text-lg lg:text-2xl opacity-90">
+                                با تخفیفات ویژه تا ۵۰٪ از بهترین برندهای دنیا
+                                خرید کنید
+                            </p>
+
+                            <div class="flex flex-col sm:flex-row gap-6">
+                                <a
+                                    href="#"
+                                    class="flex items-center justify-center sm:justify-start gap-2 w-full sm:w-auto p-3 rounded-lg bg-white text-gray-900 hover:scale-105 hover:opacity-90 transition-all">
+                                    <svg class="size-5">
+                                        <use href="#icon-zap"></use>
+                                    </svg>
+                                    مشاهده محصولات
+                                    <svg class="size-5">
+                                        <use href="#icon-arrow-left"></use>
+                                    </svg>
+                                </a>
+                                <a
+                                    href="#"
+                                    class="flex items-center justify-center sm:justify-start gap-2 w-full sm:w-auto p-3 rounded-lg bg-white text-blue-500 hover:scale-105 transition-transform">
+                                    <svg class="size-5">
+                                        <use href="#icon-gift"></use>
+                                    </svg>
+
+                                    پیشنهادات ویژه
+                                </a>
+                            </div>
+
+                            <div class="grid grid-cols-3 gap-6">
+                                <div
+                                    class="flex flex-col gap-2 p-4 text-center bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-2xl transition-colors">
+                                    <span
+                                        class="font-vazir-bold text-2xl sm:text-3xl"
+                                        >200+</span
+                                    >
+                                    <span class="text-xs sm:text-sm opacity-80"
+                                        >محصول متنوع</span
+                                    >
+                                </div>
+                                <div
+                                    class="flex flex-col gap-2 p-4 text-center bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-2xl transition-colors">
+                                    <span
+                                        class="font-vazir-bold text-2xl sm:text-3xl"
+                                        >100+</span
+                                    >
+                                    <span class="text-xs sm:text-sm opacity-80"
+                                        >برند معتبر</span
+                                    >
+                                </div>
+                                <div
+                                    class="flex flex-col gap-2 p-4 text-center bg-white/10 hover:bg-white/20 backdrop-blur-sm rounded-2xl transition-colors">
+                                    <span
+                                        class="font-vazir-bold text-2xl sm:text-3xl"
+                                        >5000+</span
+                                    >
+                                    <span class="text-xs sm:text-sm opacity-80"
+                                        >مشتری راضی</span
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
 
         <!-- Main JavaScript file -->
         <script src="./js/script.js"></script>
