fix: update banner section styles for improved appearance

--- a/src/index.html
+++ b/src/index.html
@@ -633,7 +633,7 @@
                                 >15% تخفیف</span
                             >
                             <span
-                                class="absolute -bottom-6 -left-3 lg:-left-6 py-2 px-4 bg-gradient-to-r from-emerald-500 to-green-600 rounded-xl lg:rounded-2xl text-xs lg:text-sm text-white animate-bounce"
+                                class="absolute -bottom-6 -left-3 xl:-left-4 2xl:-left-6 py-2 px-4 bg-gradient-to-r from-emerald-500 to-green-600 rounded-xl lg:rounded-2xl text-xs lg:text-sm text-white animate-bounce"
                                 >ارسال رایگان</span
                             >
                         </div>
